--- a/python_notebooks/Workbook.ipynb
+++ b/python_notebooks/Workbook.ipynb
@@ -9,59 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: altair_saver in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (0.5.0)\n",
-      "Requirement already satisfied: vega_datasets in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (0.9.0)\n",
-      "Requirement already satisfied: altair in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair_saver) (5.5.0)\n",
-      "Requirement already satisfied: altair-data-server>=0.4.0 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair_saver) (0.4.1)\n",
-      "Requirement already satisfied: altair-viewer in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair_saver) (0.4.0)\n",
-      "Requirement already satisfied: selenium in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair_saver) (4.31.0)\n",
-      "Requirement already satisfied: pandas in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from vega_datasets) (2.2.3)\n",
-      "Requirement already satisfied: portpicker in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair-data-server>=0.4.0->altair_saver) (1.6.0)\n",
-      "Requirement already satisfied: tornado in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair-data-server>=0.4.0->altair_saver) (6.4.2)\n",
-      "Requirement already satisfied: jinja2 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair->altair_saver) (3.1.5)\n",
-      "Requirement already satisfied: jsonschema>=3.0 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair->altair_saver) (4.23.0)\n",
-      "Requirement already satisfied: narwhals>=1.14.2 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair->altair_saver) (1.24.0)\n",
-      "Requirement already satisfied: packaging in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair->altair_saver) (24.2)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from altair->altair_saver) (4.12.2)\n",
-      "Requirement already satisfied: numpy>=1.22.4 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from pandas->vega_datasets) (1.26.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from pandas->vega_datasets) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from pandas->vega_datasets) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from pandas->vega_datasets) (2025.1)\n",
-      "Requirement already satisfied: urllib3<3,>=1.26 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from urllib3[socks]<3,>=1.26->selenium->altair_saver) (2.3.0)\n",
-      "Requirement already satisfied: trio~=0.17 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from selenium->altair_saver) (0.29.0)\n",
-      "Requirement already satisfied: trio-websocket~=0.9 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from selenium->altair_saver) (0.12.2)\n",
-      "Requirement already satisfied: certifi>=2021.10.8 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from selenium->altair_saver) (2025.1.31)\n",
-      "Requirement already satisfied: websocket-client~=1.8 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from selenium->altair_saver) (1.8.0)\n",
-      "Requirement already satisfied: attrs>=22.2.0 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from jsonschema>=3.0->altair->altair_saver) (25.1.0)\n",
-      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from jsonschema>=3.0->altair->altair_saver) (2024.10.1)\n",
-      "Requirement already satisfied: referencing>=0.28.4 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from jsonschema>=3.0->altair->altair_saver) (0.36.2)\n",
-      "Requirement already satisfied: rpds-py>=0.7.1 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from jsonschema>=3.0->altair->altair_saver) (0.22.3)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas->vega_datasets) (1.17.0)\n",
-      "Requirement already satisfied: sortedcontainers in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from trio~=0.17->selenium->altair_saver) (2.4.0)\n",
-      "Requirement already satisfied: idna in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from trio~=0.17->selenium->altair_saver) (3.10)\n",
-      "Requirement already satisfied: outcome in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from trio~=0.17->selenium->altair_saver) (1.3.0.post0)\n",
-      "Requirement already satisfied: sniffio>=1.3.0 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from trio~=0.17->selenium->altair_saver) (1.3.1)\n",
-      "Requirement already satisfied: exceptiongroup in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from trio~=0.17->selenium->altair_saver) (1.2.2)\n",
-      "Requirement already satisfied: wsproto>=0.14 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from trio-websocket~=0.9->selenium->altair_saver) (1.2.0)\n",
-      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from urllib3[socks]<3,>=1.26->selenium->altair_saver) (1.7.1)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from jinja2->altair->altair_saver) (3.0.2)\n",
-      "Requirement already satisfied: psutil in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from portpicker->altair-data-server>=0.4.0->altair_saver) (6.1.1)\n",
-      "Requirement already satisfied: h11<1,>=0.9.0 in /Users/shivpat/anaconda3/envs/DataViz/lib/python3.10/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium->altair_saver) (0.14.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import altair as alt\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "!pip install altair_saver vega_datasets"
+    "import numpy as np"
    ]
   },
   {
