--- a/python_notebooks/Workbook.ipynb
+++ b/python_notebooks/Workbook.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "#Any zeros present?\n",
+    "#Any NaN values present?\n",
     "zeros = df.isnull().sum()\n",
     "zeros"
    ]
@@ -196,12 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Dropping rows where longitude and latitude are NaN\n",
-    "df_cleaned = df.dropna(subset=['longitude', 'latitude'])"
+    "df_cleaned = df.dropna(subset=['longitude', 'latitude'])\n",
+    "\n",
+    "#URL: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.dropna.html"
    ]
   },
   {
